tests/baselines/reference/contextualClassMethodParameter29.errors.txt
tests/cases/conformance/classes/contextualClassMethodParameter/contextualClassMethodParameter29.ts(7,5): error TS2394: This overload signature is not compatible with its implementation signature.
tests/cases/conformance/classes/contextualClassMethodParameter/contextualClassMethodParameter29.ts(8,12): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== tests/cases/conformance/classes/contextualClassMethodParameter/contextualClassMethodParameter29.ts (2 errors) ====
    class Base {
        method(x: number): void
        method(x: number | string): void { }
    }
    
    class Derived extends Base {
        method(): void
        ~~~~~~
!!! error TS2394: This overload signature is not compatible with its implementation signature.
!!! related TS2750 tests/cases/conformance/classes/contextualClassMethodParameter/contextualClassMethodParameter29.ts:8:5: The implementation signature is declared here.
        method(x) { }
               ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    }
    